[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = "Docker images for usage at ROCS"
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
docker = "^6.0.0"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
