[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = "Docker images for usage at ROCS"
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
docker = "^6.0.0"
pytest-xdist = "^2.5.0"
black = "^22.8.0"
pylama = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# set black line length to 120
[tool.black]
line-length = 120

# set pylama line length to 120
[tool.pylama]
linters = "pycodestyle,pyflakes,pydocstyle"
[tool.pylama.pycodestyle]
max_line_length = 120
